Color contrast fixed. Margin added in web dev links

--- a/styles/base.css
+++ b/styles/base.css
@@ -112,8 +112,12 @@ figcaption {
     padding: 15px;
 }
 
+.resources li {
+    margin-bottom: 10px;
+}
+
 footer {
-    background-color: rgb(55, 126, 207);
+    background-color: rgb(30, 80, 140);
     color: white;
     font-size: 16px;
     text-align: center;
@@ -121,6 +125,6 @@ footer {
 }
 
 #lastModified {
-    color: gold;
+    color: rgb(255, 230, 120);
     font-weight: bold;
 }
